# enna

./: .hgignore  AUTHORS  COPYING  ChangeLog  MAINTAINERS  Makefile.am  README  TODO  autogen.sh  configure.ac  configure.in  enna.cfg.example  enna.cfg.sample  get_enna.sh
DOCS/: enna.dia
data/other/: Makefile.am  enna.desktop
data/theme/: Makefile.am
data/theme/default/: Makefile.am  activity_bookstore.edc  activity_configuration.edc  activity_configuration_credits.edc  activity_configuration_sysinfo.edc  activity_games.edc  activity_gocomics.edc  activity_music.edc  activity_onemanga.edc  activity_photo.edc  activity_tv.edc  activity_video.edc  activity_video_controls.edc  activity_video_flags.edc  activity_video_infos.edc  activity_video_overlay.edc  activity_weather.edc  audio_lyrics.edc  background.edc  box.edc  browser.edc  button.edc  configuration.edc  content.edc  cover_video.edc  default.edc  default.edj  elm.edc  enna_background.edc  enna_mainmenu.edc  enna_widget_menubar.edc  exit.edc  gadgets.edc  games.edc  icons.edc  list.edc  location.edc  mainmenu.edc  mediacontrol.edc  mediaplayer.edc  (+13 more)
data/theme/default/gadgets/date/: date.edc
data/theme/n900/: Makefile.am  activity_bookstore.edc  activity_configuration.edc  activity_configuration_credits.edc  activity_configuration_sysinfo.edc  activity_games.edc  activity_music.edc  activity_photo.edc  activity_tv.edc  activity_video.edc  activity_video_controls.edc  activity_video_flags.edc  activity_video_infos.edc  activity_weather.edc  box.edc  browser.edc  cover_video.edc  elm.edc  exit.edc  fonts  gadgets.edc  icons.edc  list.edc  mainmenu.edc  mediacontrol.edc  mediaplayer.edc  n900.edc  notification_volume.edc  notification_weather.edc  picture.edc  popup.edc  slideshow.edc
data/theme/phone/: Makefile.am  icons.edc  phone.edc
data/theme/phone/elm/: elm.edc
data/theme/phone/images/: menu_bg.xcf
data/theme/phone/stb/: elm.edc
data/theme/stb/: Makefile.am  elm.edc  gad_date.edc  gad_weather.edc  icons.edc  stb.edc
data/theme/stb/elm/: elm.edc  elm.edc~  inwin_bg.png.orig
data/theme/stb/images/: interface.xcf
data/theme/tablet/: Makefile.am  box.edc  elm_genlist.edc  elm_label.edc
data/theme/touchbook/: Makefile.am  activity_music.edc  box.edc  browser.edc  elm_genlist.edc  elm_inwin.edc  elm_label.edc  exit.edc  icons.edc  touchbook.edc
debian/: changelog  control  copyright  enna-data.install  enna-modules.install  enna.install  rules
po/: LINGUAS  Makevars  POTFILES.in  da.po  de.po  el.po  es.po  fr.po  it.po  nl.po  pl.po  pt_BR.po  ru.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/modules/: Makefile.am
src/modules/activity/: Makefile.am
src/modules/activity/bookstore/: Makefile.am  bookstore.c  bookstore.h  bookstore_gocomics.c  bookstore_gocomics.h  bookstore_onemanga.c  bookstore_onemanga.h  config.mak
src/modules/activity/configuration/: Makefile.am  config.mak  configuration.c  configuration_credits.c  configuration_credits.h  configuration_sysinfo.c  configuration_sysinfo.h  credits.c  credits.h  infos.c  infos.h
src/modules/activity/games/: Makefile.am  config.mak  enna_module_games.c  games.c  games.h  games_mame.c  games_mame.h  games_sys.c  games_sys.h
src/modules/activity/gocomics/: Makefile.am  config.mak  gocomics.c
src/modules/activity/infos/: Makefile.am  configuration.c  infos.c
src/modules/activity/music/: Makefile.am  config.mak  enna_module_music.c  music.c  music.h  music_infos.c  music_infos.h  music_lyrics.c  music_lyrics.h  panel_lyrics.c  panel_lyrics.h  smart_player.c  smart_player.h
src/modules/activity/onemanga/: Makefile.am  config.mak  onemanga.c
src/modules/activity/photo/: Makefile.am  config.mak  enna_module_photo.c  exif.c  exif.h  item_class.c  item_class.h  panel_infos.c  panel_infos.h  photo.c  photo.h  photo_infos.c  photo_infos.h  photo_panel_infos.c  photo_panel_infos.h  photo_slideshow_view.c  slideshow_view.c  (+2 more)
src/modules/activity/tv/: Makefile.am  config.mak  tv.c
src/modules/activity/video/: Makefile.am  backdrop.c  backdrop.h  config.mak  enna_module_video.c  overlay.c  panel_infos.c  panel_infos.h  picture.c  picture.h  resume.c  resume.h  smart_player.c  smart_player.h  snapshot.c  snapshot.h  video.c  video.h  video_controls.c  video_controls.h  video_flags.c  video_flags.h  video_infos.c  video_infos.h  video_picture.c  video_picture.h  video_resume.c  video_resume.h
src/modules/activity/weather/: Makefile.am  config.mak  weather.c
src/modules/amazon/: Makefile.am  enna_module_amazon.c
src/modules/backend/: Makefile.am  enna_module_emotion.c
src/modules/browser/: Makefile.am  enna_module_localfiles.c
src/modules/browser/cdda/: Makefile.am  cdda.c  config.mak
src/modules/browser/ipod/: Makefile.am  config.mak  ipod.c
src/modules/browser/jamendo/: Makefile.am  config.mak  jamendo.c  spotify.c
src/modules/browser/podcasts/: Makefile.am  config.mak  enna_module_podcast.c  podcasts.c
src/modules/browser/valhalla/: Makefile.am  config.mak  enna_module_valhalla.c  valhalla.c
src/modules/gadgets/: Makefile.am
src/modules/gadgets/date/: Makefile.am  config.mak  gad_date.c
src/modules/gadgets/dummy/: Makefile.am  config.mak  gad_dummy.c
src/modules/gadgets/weather/: Makefile.am  config.mak  gad_weather.c
src/modules/input/: Makefile.am
src/modules/input/kbd/: Makefile.am  config.mak  kbd.c
src/modules/input/keyb/: Makefile.am  config.mak  keyb.c
src/modules/input/wiimote/: Makefile.am  config.mak  wiimote.c
src/modules/metadata/: Makefile.am
src/modules/music/: Makefile.am  enna_module_music.c  enna_module_music.h  smart_player.c  smart_player.h
src/modules/photo/: Makefile.am  enna_module_photo.c  smart_player.c  smart_player.h
src/modules/video/: Makefile.am  enna_module_video.c  smart_player.c  smart_player.h
src/modules/volume/: Makefile.am
src/modules/volume/hal/: Makefile.am  config.mak  enna_module_hal.c  hal.c  hal_storage.c  hal_storage.h  hal_volume.c  hal_volume.h
utils/: e17_build.sh  get_enna.sh  searchMovieAllocine.php  searchMovieIMDB.php  smart_template.c  smart_template.h
(+74 files in other folders)
